rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_lines_perpendicular.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
sketch(on = XY) {
  line1 = line(
    start = [
      var 2.000000064858383,
      var 2.999999989591659
    ],
    end = [
      var 2.00000001040834,
      var 3.0000000104083404
    ],
  )
  line2 = line(
    start = [
      var 5.999999989591659,
      var 6.99999998959166
    ],
    end = [
      var 6.000000010408341,
      var 7.000000010408341
    ],
  )
  perpendicular([line1, line2])
}
