rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_multiple_sketch_blocks_2.snap
---
source: kcl-lib/src/frontend.rs
expression: src_delta.text.as_str()
---
// Cube that requires the engine.
width = 2
sketch001 = startSketchOn(XY)
profile001 = startProfile(sketch001, at = [0, 0])
  |> yLine(length = width, tag = $seg1)
  |> xLine(length = width)
  |> yLine(length = -width)
  |> line(endAbsolute = [profileStartX(%), profileStartY(%)])
  |> close()
extrude001 = extrude(profile001, length = width)

// Get a value that requires the engine.
x = segLen(seg1)

// Triangle with side length 2*x.
sketch(on = XY) {
  line1 = line(
    start = [var 1mm, var 2mm],
    end = [
      var 2.3166183088541943mm,
      var -1.7771042130384829mm
    ],
  )
  line2 = line(
    start = [
      var 2.316618308854193mm,
      var -1.7771042130384824mm
    ],
    end = [
      var -1.6127590460007428mm,
      var -1.028777009768919mm
    ],
  )
  coincident([line1.end, line2.start])
  line3 = line(
    start = [
      var -1.612759046000744mm,
      var -1.0287770097689193mm
    ],
    end = [var 1mm, var 2mm],
  )
  coincident([line2.end, line3.start])
  coincident([line3.end, line1.start])
  equalLength([line3, line1])
  equalLength([line1, line2])
  distance([line1.start, line1.end]) == 2 * x
}

// Line segment with length x.
sketch2 = sketch(on = XY) {
  line1 = line(
    start = [var 3mm, var 4mm],
    end = [
      var 2.324011185923613mm,
      var 2.117703756609144mm
    ],
  )
  distance([line1.start, line1.end]) == x
}
