rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_new_sketch_add_arc_edit_arc_1.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch001 = sketch(on = XY) {
  arc(start = [var 0mm, var 0mm], end = [var 10mm, var 10mm], center = [var 10mm, var 0mm])
}

