rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_new_sketch_add_arc_edit_arc_2.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch001 = sketch(on = XY) {
  arc(start = [var 1mm, var 2mm], end = [var 13mm, var 14mm], center = [var 13mm, var 2mm])
}

