rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_new_sketch_add_circle_edit_circle_1.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch001 = sketch(on = XY) {
  circle1 = circle(start = [var 5mm, var 0mm], center = [var 0mm, var 0mm])
}

