rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_new_sketch_add_line_delete_sketch_1.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch001 = sketch(on = XY) {
  line(start = [0mm, 0mm], end = [10mm, 10mm])
}

