rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_new_sketch_add_line_edit_line_2.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch001 = sketch(on = XY) {
  line(start = [1mm, 2mm], end = [13mm, 14mm])
}

