rust/kcl-lib/src/snapshots/kcl_lib__frontend__tests__test_new_sketch_add_point_edit_point_1.snap
---
source: kcl-lib/src/frontend.rs
expression: "src_delta.text.as_str()"
---
sketch001 = sketch(on = XY) {
  point(at = [1in, 2in])
}

